--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
